// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message TasInstanceSyncPerpetualTaskParams {
  string account_id = 1;
  repeated TasDeploymentRelease tas_deployment_release_list = 2;
}

message TasDeploymentRelease {
  bytes tas_infra_config = 1;
  string application_name = 2;
}
